// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`form - PhoneInputField > should be disabled when disabled prop is true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="phone-_r_18_"
        >
          Phone Number
        </label>
        <div
          class="uv_18vyj9d4 uv_18vyj9d1"
          data-disabled="true"
          data-error="false"
        >
          <div
            class="uv_18vyj9d0 uv_mxir930 uv_mxir93d uv_mxir932d"
            data-disabled="true"
          >
            🇫🇷
          </div>
          <input
            aria-invalid="false"
            class="uv_18vyj9d5"
            data-size="large"
            disabled=""
            id="phone-_r_18_"
            maxlength="20"
            name="phone"
            placeholder="+33 6 12 34 56 78"
            type="tel"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`form - PhoneInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="phone-_r_0_"
        >
          Phone Number
        </label>
        <div
          class="uv_18vyj9d4 uv_18vyj9d1"
          data-disabled="false"
          data-error="false"
        >
          <div
            class="uv_18vyj9d0 uv_mxir930 uv_mxir93d uv_mxir932d"
            data-disabled="false"
          >
            🇫🇷
          </div>
          <input
            aria-invalid="false"
            class="uv_18vyj9d5"
            data-size="large"
            id="phone-_r_0_"
            maxlength="20"
            name="phone"
            placeholder="+33 6 12 34 56 78"
            type="tel"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`form - PhoneInputField > should work with default country 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="phone-_r_i_"
        >
          Phone Number
        </label>
        <div
          class="uv_18vyj9d4 uv_18vyj9d1"
          data-disabled="false"
          data-error="false"
        >
          <div
            class="uv_18vyj9d0 uv_mxir930 uv_mxir93d uv_mxir932d"
            data-disabled="false"
          >
            🇺🇸
          </div>
          <input
            aria-invalid="false"
            class="uv_18vyj9d5"
            data-size="large"
            id="phone-_r_i_"
            maxlength="20"
            name="phone"
            placeholder="+1 201-555-0123"
            type="tel"
            value="+1 202-555-1234"
          />
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
